Bulk insert to languages